--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,15 @@
+* {
+  /* outline: 1px solid red; */
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #f3d5a1;
+  --foreground: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #214e78;
     --foreground: #ededed;
   }
 }
@@ -14,6 +18,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -22,6 +27,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* overflow-y: scroll; */
 }
 
 * {
@@ -39,4 +45,9 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.full-section {
+  padding: 15px;
+  height: 100vh;
 }
