--- a/src/components/astro/AboutMe.astro
+++ b/src/components/astro/AboutMe.astro
@@ -39,7 +39,7 @@ import GridGen from "../../components/react/GridGen.jsx";
       </div>
   
       <!-- Right side: image -->
-      <div class="flex-1 flex justify-center md:justify-end">
+      <div class="flex-1 flex justify-center md:justify-end pointer-events-auto">
         <img 
           src="https://picsum.photos/300/400" 
           alt="Portrait of Daffa" 
