i'm tired of fixing mobile responsive shit

--- a/src/components/astro/AboutMe.astro
+++ b/src/components/astro/AboutMe.astro
@@ -4,11 +4,11 @@ import GridGen from "../../components/react/GridGen.jsx";
 ---
 
 <section
-	class="relative w-screen h-screen flex justify-center items-center-safe flex-col pointer-events-none"
+	class="relative w-screen h-screen flex justify-center items-center-safe flex-col pointer-events-none overflow-x-hidden"
 >
 	<div
 		id="background"
-		class="absolute w-full h-full flex justify-between z-[-10] pointer-events-auto overflow-x-hidden"
+		class="absolute w-full h-full flex justify-between z-[-10] pointer-events-auto"
 	>
 		<div id="bg-left" class="background w-[50vw] h-full"></div>
 		<div id="bg-right" class="background w-[50vw] h-full"></div>
