adding the images cause it's not make any problem

--- a/src/components/astro/AboutMe.astro
+++ b/src/components/astro/AboutMe.astro
@@ -91,7 +91,7 @@ import GridGen from "../../components/react/GridGen.jsx";
 			</div>
 
 			<!-- Right side: image -->
-			<!-- <div
+			<div
 				class="flex-1 flex justify-center md:justify-end pointer-events-auto"
 			>
 				<img
@@ -100,7 +100,7 @@ import GridGen from "../../components/react/GridGen.jsx";
 					data-cursor-style="image"
 					class="rounded-xl shadow-lg max-w-xs pointer-events-auto"
 				/>
-			</div> -->
+			</div>
 		</div>
 	</div>
 </section>
