--- a/src/components/astro/AboutMe.astro
+++ b/src/components/astro/AboutMe.astro
@@ -4,7 +4,7 @@ import GridGen from "../../components/react/GridGen.jsx";
 ---
 
 <section
-	class="relative w-screen h-screen flex justify-center items-center-safe flex-col pointer-events-none overflow-x-hidden"
+	class="relative w-screen h-screen flex justify-center items-center-safe flex-col pointer-events-none overflow-hidden"
 >
 	<div
 		id="background"
