--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import SkillsShowcase from "../components/astro/SkillsShowcase.astro";
 	>
 		<BackgroundParticles />
 		<h1 class="special-gothic-expanded-one-regular text-2xl text-center">
-			Hi, I'm
+			Hi, I'm update 1
 			<span class="text-6xl uppercase">hiyo</span>
 		</h1>
 
