finally make the line script works perfectly and it took me whole day to make it perfect

--- a/src/components/astro/AboutMe.astro
+++ b/src/components/astro/AboutMe.astro
@@ -14,10 +14,7 @@ import GridGen from "../../components/react/GridGen.jsx";
 		<div id="bg-right" class="background w-[50vw] h-full"></div>
 		<div
 			id="bg-grid"
-			class="absolute w-full h-full grid grid-cols-10
-			sm:grid-cols-8
-			xs:grid-cols-6 overflow-x-hidden"
-			style={{ aspectRatio: "10/6" }}
+			class="absolute w-full h-full grid grid-cols-10 overflow-hidden"
 		>
 			<GridGen client:only />
 		</div>
@@ -91,7 +88,7 @@ import GridGen from "../../components/react/GridGen.jsx";
 			</div>
 
 			<!-- Right side: image -->
-			<!-- <div
+			<div
 				class="flex-1 flex justify-center md:justify-end pointer-events-auto"
 			>
 				<img
@@ -100,7 +97,7 @@ import GridGen from "../../components/react/GridGen.jsx";
 					data-cursor-style="image"
 					class="rounded-xl shadow-lg max-w-xs pointer-events-auto"
 				/>
-			</div> -->
+			</div>
 		</div>
 	</div>
 </section>
@@ -123,31 +120,31 @@ import GridGen from "../../components/react/GridGen.jsx";
 					delay: stagger(100, {
 						start: 400,
 					}),
-					duration: 1000,
+					duration: 500,
 					easing: "easeOutExpo",
+
+					onComplete: () => {
+						animate(".bg-cell", {
+							border: ["50px solid red", "1px solid rgba(96, 96, 96, 0.1)"],
+							backgroundColor: [
+								"rgba(255, 255, 255, 0.1)",
+								"rgba(255, 0, 0, 0.5)",
+								"rgba(255, 255, 255, 0)",
+							],
+							delay: stagger(65, {
+								grid: [GRID_WIDTH, GRID_HEIGHT],
+								from: "center",
+							}),
+							duration: 350,
+							easing: "inBounce",
+							autoplay: onScroll({
+								enter: "enter+=80 bottom-=80",
+							}),
+						});
+					},
 				});
 			},
 			enter: "enter+=80",
-
-			onEnter: () => {
-				animate(".bg-cell", {
-					border: ["50px solid red", "1px solid rgba(96, 96, 96, 0.1)"],
-					backgroundColor: [
-						"rgba(255, 255, 255, 0.1)",
-						"rgba(255, 0, 0, 0.5)",
-						"rgba(255, 255, 255, 0)",
-					],
-					delay: stagger(65, {
-						grid: [GRID_WIDTH, GRID_HEIGHT],
-						from: "center",
-					}),
-					duration: 450,
-					easing: "inBounce",
-					autoplay: onScroll({
-						enter: "enter+=80 bottom-=80",
-					}),
-				});
-			},
 		}),
 	});
 </script>
