--- a/src/components/astro/SkillsShowcase.astro
+++ b/src/components/astro/SkillsShowcase.astro
@@ -1,13 +1,56 @@
 ---
-
+import LineSkills from "./LineSkills.astro";
 ---
 
 <section
-	class="w-screen h-screen flex justify-center items-center-safe flex-col"
+	class="w-screen h-screen flex justify-center items-center-safe flex-col relative"
 >
-	<h1 class="text-7xl font-bold uppercase special-gothic-expanded-one-regular">
+	<h1
+		id="skills-showcase-title"
+		class="text-7xl font-bold uppercase special-gothic-expanded-one-regular text-center absolute"
+		data-cursor-style="none"
+	>
 		My skills
 	</h1>
+
+	<div id="content-skills" class="">
+		<img
+			src="/my-icon.webp"
+			alt="Portrait of Daffa"
+			data-cursor-style="image"
+			id="icon-skills"
+			width="130"
+			class="rounded-xl shadow-lg max-w-xs pointer-events-auto"
+		/>
+		<div id="skills" class="w-20 h-20 bg-red-500 absolute top-90 left-200">
+		</div>
+	</div>
 </section>
 
-<script></script>
+<script>
+	import { animate, onScroll } from "animejs";
+
+	animate("#skills-showcase-title", {
+		delay: 500,
+		opacity: 0,
+		scale: 5.5,
+		ease: "inExpo",
+		autoplay: onScroll({
+			leave: "top+=300",
+		}),
+
+		onComplete: () => {
+			const titleElement = document.getElementById("skills-showcase-title");
+			if (titleElement) {
+				titleElement.style.display = "none";
+			}
+
+			animate("#content-skills > img", {
+				opacity: 1,
+				// scale: 1,
+				duration: 1000,
+				easing: "easeOutExpo",
+			});
+		},
+	});
+</script>
