--- a/src/components/astro/SkillsShowcase.astro
+++ b/src/components/astro/SkillsShowcase.astro
@@ -1,42 +1,50 @@
 ---
 import LineSkills from "./LineSkills.astro";
-import SkillsBox from "./SkillsBox.astro";
+import SkillsBox from "../react/SkillsBox.jsx";
+import { SkillsCollection, baseSkills } from "../react/SkillsCollection.jsx";
+import { Image } from "astro:assets";
 ---
 
 <section
-	class="w-screen h-screen flex justify-center items-center-safe flex-col relative"
+	class="w-screen h-screen flex justify-center items-center-safe flex-col relative overflow-hidden"
 >
-	<h1
-		id="skills-showcase-title"
-		class="text-7xl font-bold uppercase special-gothic-expanded-one-regular text-center absolute"
-		data-cursor-style="none"
-	>
-		My skills
-	</h1>
-
-	<div id="content-skills" class="">
-		<img
+	<div id="content-skills" class="blur-md">
+		<Image
 			src="/my-icon.webp"
 			alt="Portrait of Daffa"
 			data-cursor-style="image"
 			id="icon-skills"
-			width="130"
+			width={130}
+			height={130}
 			class="rounded-xl shadow-lg max-w-xs pointer-events-auto"
 		/>
 
 		<!-- <div id="skills" class="w-20 h-20 bg-red-500 absolute top-90 left-200">
 		</div> -->
-		<!-- <LineSkills targetID="skills" /> -->
 
-		<SkillsBox title="home" progress={20} icon="HTML" skillsID="skills-html" />
+		<SkillsCollection client:visible />
+
+		{
+			baseSkills.map((skill) => (
+				<LineSkills key={skill.id} targetID={skill.id} />
+			))
+		}
 	</div>
+
+	<h1
+		id="skills-showcase-title"
+		class="text-7xl font-bold uppercase special-gothic-expanded-one-regular text-center absolute pointer-events-auto"
+		data-cursor-style="none"
+	>
+		My skills
+	</h1>
 </section>
 
 <script>
 	import { animate, onScroll } from "animejs";
 
 	animate("#skills-showcase-title", {
-		delay: 500,
+		delay: 700,
 		opacity: 0,
 		scale: 5.5,
 		ease: "inExpo",
@@ -45,14 +53,14 @@ import SkillsBox from "./SkillsBox.astro";
 		}),
 
 		onComplete: () => {
+			// FOR PC USER
 			const titleElement = document.getElementById("skills-showcase-title");
 			if (titleElement) {
 				titleElement.style.display = "none";
 			}
 
-			animate("#content-skills > img", {
-				opacity: 1,
-				// scale: 1,
+			animate("#content-skills", {
+				filter: "blur(0px)",
 				duration: 1000,
 				easing: "easeOutExpo",
 			});
